test/errors/identifiers_error/zs/reserved_keywords/cpp_keyword_field_name_error.zs
package reserved_keywords.cpp_keyword_field_name_error;

struct Item
{
    uint16  param;
    uint32  auto;   // reserved keyword in generated C++
};
